(fix) code block page overflow

--- a/src/styles/prism.scss
+++ b/src/styles/prism.scss
@@ -1,9 +1,15 @@
 /** Prism customizations */
 
 pre[class*="language-"] {
-  @apply md:-ml-8;
-  @apply md:-mr-8;
-  @apply mb-8;
+  @apply -ml-4 -mr-4 mb-8 rounded-none w-screen;
+
+  @apply sm:max-w-screen-sm sm:mx-0 sm:w-auto;
+
+  @media (min-width: 640px) {
+    border-radius: 0.3em;
+  }
+
+  @apply md:max-w-screen-md;
 }
 
 code[class*="language-"],
