--- a/src/templates/posts_template.module.scss
+++ b/src/templates/posts_template.module.scss
@@ -27,7 +27,7 @@
 
 .toc {
   @apply ml-auto;
-  @apply hidden md:block;
+  @apply hidden lg:block;
 
   /* h2 */
   ul {
